[package]
name = "demo-biscuit-axum-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = { version = "0.4.1", features = [ "std" ] }
axum = { version = "0.6.18", features = ["macros"]}
axum-extra = {version = "0.4.0", features = ["cookie", "cookie-signed"]}
biscuit-auth = "3.1"
hex = "0.4.3"
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8.0", features = [ "serde" ] }
serde = { version = "1.0.147", features = [ "derive" ] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
validator = { version = "0.15", features = ["derive"] }